--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
 
                     <h1 class="home__title">Agustín Cortazzi</h1>
-                    <span class="home__profession">Full-Stack Developer</span>
+                    <span class="home__profession">Fronted Developer</span>
 
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/agustin-cortazzi-913196211/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.instagram.com/agustincortazzi/" target="_blank" class="footer__link"><i class='bx bxl-instagram'></i></a>
                         <a href="https://github.com/Agustin180" target="_blank" class="home__social-link"><i class='bx bxl-github'></i></a>
                     </div>
 
@@ -71,9 +72,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__data">
-                    <p class="about__description">Desarrollador Web con dos años de experiencia Freelance en el rubro.
-                        Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web
-                        comerciales, tiendas virtuales, sistemas de pago online MongoDB y NodeJS.</p>
+                    <p class="about__description">Desarrollador Web con dos años de experiencia Fronted  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
                     <img src="assets/img/about.png" alt="" class="about__img">
                 </div>
                 <div>
@@ -226,7 +225,7 @@
                 <div class="education__content">
                     <div>
                         <h3 class="education__year">2021 - 2021</h3>
-                        <span class="education__university">UBA - Cbc Universitario en curso, Ingeniero en Sistemas</span>
+                        <span class="education__university">UBA - Cbc Universitario en curso, Ingenieria en Sistemas</span>
                     </div>
 
                     <div class="education__time">
@@ -251,7 +250,7 @@
                     <img src="assets/img/work1.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetaci-n-HTML-CSS-Responsive-y-Animaciones/" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Maquetaci-n-HTML-CSS-Responsive-y-Animaciones/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Maquetación Responsive y Animaciones</span>
                     </div>
                 </div>
@@ -260,7 +259,7 @@
                     <img src="assets/img/work2.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-JavaScript-JQuery/index.html" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Maquetacion-JavaScript-JQuery/index.html" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Maquetacion JavaScript/JQuery</span>
                     </div>
                 </div>
@@ -269,8 +268,8 @@
                     <img src="assets/img/work3.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Aplicaci-n-Review-Peliculas/" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Aplicación React de Peliculas</span>
+                        <a href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Maquetacion HTML/CSS</span>
                     </div>
                 </div>
 
@@ -278,7 +277,7 @@
                     <img src="assets/img/work4.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Reloj-Digital/" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Reloj-Digital/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Reloj Digital</span>
                     </div>
                 </div>
@@ -287,7 +286,7 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Formulario-Registro/" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Formulario-Registro/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Formulario</span>
                     </div>
                 </div>
@@ -296,7 +295,7 @@
                     <img src="assets/img/work6.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Calculadora/" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Calculadora/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Calculadora</span>
                     </div>
                 </div>
