--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="education__content">
                     <div>
                         <h3 class="education__year">2021 - 2021</h3>
-                        <span class="education__university">UBA - Cbc Universitario en curso, Ingenieria en Sistemas</span>
+                        <span class="education__university">UBA - Cbc Universitario en curso, Ingeniería en Informática</span>
                     </div>
 
                     <div class="education__time">
