--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/agustin-cortazzi-913196211/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://www.instagram.com/agustincortazzi/" target="_blank" class="footer__link"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.instagram.com/agustincortazzi/" target="_blank" class="home__social-link"><i class='bx bxl-instagram'></i></a>
                         <a href="https://github.com/Agustin180" target="_blank" class="home__social-link"><i class='bx bxl-github'></i></a>
                     </div>
 
@@ -251,7 +251,7 @@
 
                     <div class="works__data">
                         <a href="https://agustin180.github.io/Maquetaci-n-HTML-CSS-Responsive-y-Animaciones/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetación Responsive y Animaciones</span>
+                        <span class="works__title">Maquetación Animaciones y Responsive</span>
                     </div>
                 </div>
 
@@ -260,7 +260,7 @@
 
                     <div class="works__data">
                         <a href="https://agustin180.github.io/Maquetacion-JavaScript-JQuery/index.html" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetacion JavaScript/JQuery</span>
+                        <span class="works__title">Maquetación JavaScript/JQuery</span>
                     </div>
                 </div>
                 
@@ -269,12 +269,21 @@
 
                     <div class="works__data">
                         <a href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetacion HTML/CSS</span>
+                        <span class="works__title">Maquetación HTML/CSS</span>
                     </div>
                 </div>
 
                 <div class="works__img">
                     <img src="assets/img/work4.jpg" alt="">
+
+                    <div class="works__data">
+                        <a href="https://agustin180.github.io/Maquetacion-Netflix/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Maquetación Estilo Netflix Responsive</span>
+                    </div>
+                </div>
+
+                <div class="works__img">
+                    <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
                         <a href="https://agustin180.github.io/Reloj-Digital/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
@@ -283,20 +292,11 @@
                 </div>
 
                 <div class="works__img">
-                    <img src="assets/img/work5.jpg" alt="">
-
-                    <div class="works__data">
-                        <a href="https://agustin180.github.io/Formulario-Registro/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Formulario</span>
-                    </div>
-                </div>
-
-                <div class="works__img">
                     <img src="assets/img/work6.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Calculadora/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Calculadora</span>
+                        <a href="https://agustin180.github.io/Test-DesarrolladorWeb/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Test Desarrollador</span>
                     </div>
                 </div>
             </div>
