--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Reloj-Digital/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Reloj Digital</span>
+                        <a href="https://agustin180.github.io/Formulario-Responsive/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Formulario Responsive</span>
                     </div>
                 </div>
 
