--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
                     <h1 class="home__title">Agustín Cortazzi</h1>
-                    <span class="home__profession">Fronted Developer</span>
+                    <span class="home__profession">Full-Stack Developer</span>
 
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/agustin-cortazzi-913196211/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
@@ -72,7 +72,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__data">
-                    <p class="about__description">Desarrollador Web con dos años de experiencia Fronted  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
+                    <p class="about__description">Desarrollador Web con dos años de experiencia Full-Stack  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
                     <img src="assets/img/about.png" alt="" class="about__img">
                 </div>
                 <div>
