--- a/index.html
+++ b/index.html
@@ -47,16 +47,15 @@
             <div class="home__container bd-grid">
                 <div class="home__data">
                     <div class="home__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img  id="imgperfil" src="assets/img/perfil.png" alt="">
                     </div>
 
 
                     <h1 class="home__title">Agustín Cortazzi</h1>
-                    <span class="home__profession">Full-Stack Developer</span>
+                    <span class="home__profession">Front-End Developer</span>
 
                     <div class="home__social">
                         <a href="https://www.linkedin.com/in/agustin-cortazzi-913196211/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://www.instagram.com/agustincortazzi/" target="_blank" class="home__social-link"><i class='bx bxl-instagram'></i></a>
                         <a href="https://github.com/Agustin180" target="_blank" class="home__social-link"><i class='bx bxl-github'></i></a>
                     </div>
 
@@ -72,7 +71,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__data">
-                    <p class="about__description">Desarrollador Web con dos años de experiencia Full-Stack  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
+                    <p class="about__description">Desarrollador Web con dos años de experiencia Front-End  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
                     <img src="assets/img/about.png" alt="" class="about__img">
                 </div>
                 <div>
@@ -86,7 +85,7 @@
 
                         <div class="about__informacion-data">
                             <i class='bx bx-phone about__information-icon'></i>
-                            <span>11-40998832</span>
+                            <span>11-68603743</span>
                         </div>
 
                         <div class="about__informacion-data">
@@ -137,14 +136,14 @@
 
                     <div class="skills__data">
                         <span class="skills__name">Javascript</span>
-                        <span class="skills__number">80%</span>
+                        <span class="skills__number">85%</span>
                         <span class="skills__bar skills__js"></span>
                     </div>
 
                     <div class="skills__data">
                         <span class="skills__name">React</span>
-                        <span class="skills__number">70%</span>
-                        <span class="skills__bar skills__react"></span>
+                        <span class="skills__number">80%</span>
+                        <span class="skills__bar skills__angular"></span>
                     </div>
 
                     <div class="skills__data">
@@ -155,30 +154,30 @@
                 </div>
 
                 <div class="skills__content">
-                    <h3 class="skills__subtitle">Backend</h3>
+                    <h3 class="skills__subtitle">Frontend</h3>
 
                     <div class="skills__data">
-                        <span class="skills__name">NodeJS</span>
+                        <span class="skills__name">NextJS</span>
                         <span class="skills__number">80%</span>
-                        <span class="skills__bar skills__php"></span>
+                        <span class="skills__bar skills__angular"></span>
                     </div>
 
                     <div class="skills__data">
-                        <span class="skills__name">MongoDB</span>
+                        <span class="skills__name">Bootstrap</span>
+                        <span class="skills__number">85%</span>
+                        <span class="skills__bar skills__js"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">TailwindCSS</span>
+                        <span class="skills__number">85%</span>
+                        <span class="skills__bar skills__js"></span>
+                    </div>
+
+                    <div class="skills__data">
+                        <span class="skills__name">Styled-Components</span>
                         <span class="skills__number">80%</span>
-                        <span class="skills__bar skills__node"></span>
-                    </div>
-
-                    <div class="skills__data">
-                        <span class="skills__name">MySQL</span>
-                        <span class="skills__number">70%</span>
-                        <span class="skills__bar skills__firebase"></span>
-                    </div>
-
-                    <div class="skills__data">
-                        <span class="skills__name">PHP</span>
-                        <span class="skills__number">60%</span>
-                        <span class="skills__bar skills__python"></span>
+                        <span class="skills__bar skills__angular"></span>
                     </div>                    
                 </div>
             </div>
@@ -209,7 +208,7 @@
                 <div class="education__content">
                     <div>
                         <h3 class="education__year">2019 - 2020</h3>
-                        <span class="education__university">Master en JavaScript,JQuery,Typescript</span>
+                        <span class="education__university">Master en JavaScript,React,Typescript</span>
                     </div>
 
                     <div class="education__time">
@@ -218,7 +217,7 @@
                     </div>
                     <div>
                         <h3 class="education__race">Certificación Udemy</h3>
-                        <span class="education__specialty">Frontend-Backend</span>
+                        <span class="education__specialty">Frontend</span>
                     </div>
                 </div>
 
@@ -250,7 +249,7 @@
                     <img src="assets/img/work1.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetaci-n-HTML-CSS-Responsive-y-Animaciones/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Maquetación Animaciones y Responsive</span>
                     </div>
                 </div>
@@ -286,8 +285,8 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Formulario Responsive</span>
+                        <a id="imgeditor" href="https://hooray.sites.imcreate.us/Editor" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Editor Diseño Grafico React/Tailwindcss</span>
                     </div>
                 </div>
 
@@ -295,8 +294,8 @@
                     <img src="assets/img/work6.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Test-DesarrolladorWeb/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Test Desarrollador</span>
+                        <a href="https://agustin180.github.io/Landing-Page-React/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Landing Page React/Styled-Components/Responsive</span>
                     </div>
                 </div>
             </div>
@@ -314,7 +313,6 @@
             <p class="footer_description">Hola soy agustín y este es mí portafolio personal, consultame aqui.</p>
             <div class="footer__social">
                 <a href="https://www.linkedin.com/in/agustin-cortazzi-913196211/" target="_blank" class="footer__link"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://www.instagram.com/agustincortazzi/" target="_blank" class="footer__link"><i class='bx bxl-instagram'></i></a>
                 <a href="https://github.com/Agustin180" target="_blank" class="footer__link"><i class='bx bxl-github'></i></a>
             </div>
 
