--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                     <img src="assets/img/work2.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-JavaScript-JQuery/index.html" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetación JavaScript/JQuery</span>
+                        <a href="https://agustin180.github.io/Crud-react/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">CRUD React Hooks</span>
                     </div>
                 </div>
                 
@@ -267,8 +267,8 @@
                     <img src="assets/img/work3.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetación HTML/CSS</span>
+                        <a href="https://agustin180.github.io/moviedb-api/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Consumo Api - MovieDB</span>
                     </div>
                 </div>
 
