--- a/index.html
+++ b/index.html
@@ -247,10 +247,13 @@
             <div class="works__container bd-grid">
                 <div class="works__img">
                     <img src="assets/img/work1.jpg" alt="">
-
+                        
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        
+                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link">
+                        <i class='bx bx-link-alt'></i>
                         <span class="works__title">Maquetación Animaciones y Responsive</span>
+                        </a>
                     </div>
                 </div>
 
