--- a/index.html
+++ b/index.html
@@ -250,10 +250,8 @@
                         
                     <div class="works__data">
                         
-                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link">
-                        <i class='bx bx-link-alt'></i>
+                        <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Maquetación Animaciones y Responsive</span>
-                        </a>
                     </div>
                 </div>
 
