--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a id="imgeditor" href="https://hooray.sites.imcreate.us/Editor" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Editor Diseño Grafico React/Tailwindcss</span>
+                        <a id="imgeditor" href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Maquetación CSS Muestra</span>
                     </div>
                 </div>
 
