--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__data">
-                    <p class="about__description">Desarrollador Web con dos años de experiencia Front-End  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
+                    <p class="about__description">Desarrollador Web con tres años de experiencia Front-End  en el rubro. Participación, gestión y consultoría HTML,CSS y JavaScript para proyectos de sitios web  comerciales, tiendas virtuales, y aplicaciones React.</p>
                     <img src="assets/img/about.png" alt="" class="about__img">
                 </div>
                 <div>
@@ -99,7 +99,7 @@
                         <div class="about__informacion-data">
                             <i class='bx bx-data about__information-icon'></i>
                             <div>
-                                <span class="about__information-subtitle">2 Años de experiencia</span>
+                                <span class="about__information-subtitle">3 Años de experiencia</span>
                                 <span class="about__information-subtitle-small">Experienca</span>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                         <div class="about__informacion-data">
                             <i class='bx bx-briefcase about__information-icon'></i>
                             <div>
-                                <span class="about__information-subtitle">20+ Proyectos</span>
+                                <span class="about__information-subtitle">30+ Proyectos</span>
                                 <span class="about__information-subtitle-small">Completados</span>
                             </div>
                         </div>
@@ -216,14 +216,14 @@
                         <span class="education__line"></span>
                     </div>
                     <div>
-                        <h3 class="education__race">Certificación Udemy</h3>
+                        <h3 class="education__race">Certificación Fundación Carlos Slim</h3>
                         <span class="education__specialty">Frontend</span>
                     </div>
                 </div>
 
                 <div class="education__content">
                     <div>
-                        <h3 class="education__year">2021 - 2021</h3>
+                        <h3 class="education__year">2021 - 2022</h3>
                         <span class="education__university">UBA - Cbc Universitario en curso, Ingeniería en Informática</span>
                     </div>
 
@@ -247,8 +247,9 @@
             <div class="works__container bd-grid">
                 <div class="works__img">
                     <img src="assets/img/work1.jpg" alt="">
-
+                        
                     <div class="works__data">
+                        
                         <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
                         <span class="works__title">Maquetación Animaciones y Responsive</span>
                     </div>
@@ -285,8 +286,8 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a id="imgeditor" href="https://hooray.sites.imcreate.us/Editor" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Editor Diseño Grafico React/Tailwindcss</span>
+                        <a id="imgeditor" href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Maquetación CSS Muestra</span>
                     </div>
                 </div>
 
