--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                     <img src="assets/img/work2.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Crud-react/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">CRUD React Hooks</span>
+                        <a href="https://agustin180.github.io/Interactive-card-details-form-using-HTML5-CSS-Flexbox-and-JS-Vanilla/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
+                        <span class="works__title">Interactive Card Details Form</span>
                     </div>
                 </div>
                 
