--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -251,7 +251,7 @@
                     <div class="works__data">
                         
                         <a href="https://agustin180.github.io/Maquetacion-Responsive-01/" target="_blank" class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetación Animaciones y Responsive</span>
+                        <span class="works__title">Weather App - Openweathermap API</span>
                     </div>
                 </div>
 
