--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                     <img src="assets/img/work3.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/moviedb-api/" target="_blank" class="works__link"><i
+                        <a href="https://agustin180.github.io/Sunnyside-agency-landing-page-using-HTML5-CSS-Flexbox-Grid-and-JS-Vanilla/" target="_blank" class="works__link"><i
                                 class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Consumo Api - MovieDB</span>
+                        <span class="works__title">Sunny Landing Page Agency</span>
                     </div>
                 </div>
 
