--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                     <img src="assets/img/work5.jpg" alt="">
 
                     <div class="works__data">
-                        <a href="https://agustin180.github.io/Maquetacion-CSS-estandar/" target="_blank"
+                        <a href="https://agustin180.github.io/Agri-Acordo-landing-page-using-HTML5-SASS-Flexbox-Grid-and-JS-Vanilla/" target="_blank"
                             class="works__link"><i class='bx bx-link-alt'></i></a>
-                        <span class="works__title">Maquetación CSS Muestra</span>
+                        <span class="works__title">Agri Acordo Landing Page Agency</span>
                     </div>
                 </div>
 
